MicroservicesLearning/k8s/platforms-deploy.yaml
apiVersion: apps/v1
kind: Deployment

metadata: 
  name: platforms-deploy

spec:
  replicas: 1
  selector: 
    matchLabels:
      app: platformservice
  template:
    metadata:
      labels:
        app: platformservice
    spec:
      containers: 
        - name: platformservice
          image: pathknower/platformservice:latest
