MicroservicesLearning/k8s/commands-deploy.yaml
apiVersion: apps/v1
kind: Deployment

metadata: 
  name: commands-deploy

spec:
  replicas: 1
  selector: 
    matchLabels:
      app: commandservice
  template:
    metadata:
      labels:
        app: commandservice
    spec:
      containers: 
        - name: commandservice
          image: pathknower/commandservice:latest
          imagePullPolicy: "Always"
---
apiVersion: v1
kind: Service
metadata:
  name: commands-cluster-ip-srv
spec:
  type: ClusterIP
  selector:
    app: commandservice
  ports:
    - name: commandservice
      protocol: TCP
      port: 80
      targetPort: 80
