MicroservicesLearning/k8s/mssql-platform-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mssql-plat-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mssql-plat
  template:
    metadata:
      labels:
        app: mssql-plat
    spec:
      containers:
      - name: mssql-plat
        image: mcr.microsoft.com/mssql/server:2017-latest
        ports:
        - containerPort: 1433
        volumeMounts:
          - mountPath: /var/opt/mssql/data
            name: mssqldb
      volumes:
        - name: mssqldb
          persistentVolumeClaim:
            claimName: mssql-claim
---
apiVersion: v1
kind: Service
metadata:
  name: mssql-plat-cluster-ip-srv
spec:
  type: ClusterIP
  selector:
    app: mssql-plat
  ports:
    - name: mssql-plat
      protocol: TCP
      port: 1433
      targetPort: 1433
---
apiVersion: v1
kind: Service
metadata:
  name: mssql-plat-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: mssql-plat
  ports:
    - protocol: TCP
      port: 1433
      targetPort: 1433
