MicroservicesLearning/k8s/rabbitmq-delpoy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-depl
spec:
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
      - name: rabbitmq
        image: rabbitmq:3-management
        ports:
        - containerPort: 15672
          name: rbtmq-mgmt-port
        - containerPort: 5672
          name: rbtmq-msg-port
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-cluster-ip-srv
spec:
  type: ClusterIP
  selector:
    app: rabbitmq
  ports:
    - name: rbtmq-mgmt-port
      protocol: TCP
      port: 15672
      targetPort: 15672
    - name: rbtmq-msg-port
      protocol: TCP
      port: 5672
      targetPort: 5672
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-plat-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: rabbitmq
  ports:
    - name: rbtmq-mgmt-port
      protocol: TCP
      port: 15672
      targetPort: 15672
    - name: rbtmq-msg-port
      protocol: TCP
      port: 5672
      targetPort: 5672
