MicroservicesLearning/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
  - host: some.com
    http:
      paths:
      - pathType: Prefix
        path: /api/platforms
        backend:
          service:
            name: platforms-cluster-ip-srv
            port: 
              number: 80
      - pathType: Prefix
        path: /api/c/platforms
        backend:
          service:
            name: commands-cluster-ip-srv
            port:
              number: 80
